fix: keep native cache self-hostable